# local_deployment

./: Cargo.toml  README.md  checkResponse.json  test
02-test-contract-interaction/src/: main.rs
05-transaction-with-ECDSA-signature/src/: main.rs
contracts/: ERC20PresetMinterPauser.json  Lottery.json  VotingPraposal.sol
src/: main.rs  script.rs
src/script/: AlchemyToken.rs  Cargo.toml  LocalAlloyDeployment.rs  TestnetInteraction.rs  VotingPraposal.rs  WithoutState_TestERC20PresetMinterPauser.rs  sign_message.rs
test/: test
